# FFmpeg

./: local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/novasky/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/novasky/ffmpeg/: FFmpegUtil.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt  native-lib.cpp
app/src/main/jni/ffmpeg/include/: NovaPushStreamAPI.h
app/src/main/res/values/: strings.xml
app/src/test/java/com/novasky/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
文档说明/: FFmpegJNI说明.docx
